...
        Rethink uses accessibility service to detect and firewall background applications.
        Rethink does not collect or sell any information.
    </string>

    <string name="next" translatable="true">Next</string>
    <string name="skip" translatable="true">Skip</string>
    <string name="finish" translatable="true">Finish</string>

    <string name="lbl_cancel" translatable="true">Cancel</string>
    <string name="lbl_apply" translatable="true">Apply</string>
    <string name="lbl_dismiss" translatable="true">Dismiss</string>
    <string name="lbl_unknown" translatable="true">Unknown</string>
    <string name="lbl_all" translatable="true">All</string>
...
