<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_navigation"
    app:startDestination="@id/homeScreenFragment">
    <fragment
        android:id="@+id/homeScreenFragment"
        android:name="com.celzero.bravedns.ui.HomeScreenFragment"
        android:label="HomeScreenFragment" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.celzero.bravedns.ui.AboutFragment"
        android:label="AboutFragment" />
    <fragment
        android:id="@+id/summaryStatisticsFragment"
        android:name="com.celzero.bravedns.ui.SummaryStatisticsFragment"
        android:label="SummaryStatisticsFragment" />
    <fragment
        android:id="@+id/configureFragment"
        android:name="com.celzero.bravedns.ui.ConfigureFragment"
        android:label="ConfigureFragment" />
</navigation>
