...
                        android:layout_height="48dp"
                        android:layout_gravity="start"
                        android:background="?android:attr/selectableItemBackground"
                        android:padding="10dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/fhs_dns_on_off_btn"
                        style="@style/Button.HomeScreen.Main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_pause"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:paddingStart="20dp"
...
